.metadata/.plugins/org.eclipse.cdt.ui/BLE.build.log
10:28:13 **** Incremental Build of configuration Default for project BLE ****
make 
rm -rf _build
echo  Makefile
Makefile
mkdir _build
Compiling file: RTT_Syscalls_GCC.c
Compiling file: SEGGER_RTT.c
Compiling file: SEGGER_RTT_printf.c
Compiling file: app_button.c
Compiling file: app_error.c
Compiling file: app_fifo.c
Compiling file: app_timer.c
Compiling file: app_trace.c
Compiling file: nrf_assert.c
Compiling file: sdk_mapped_flags.c
Compiling file: nrf_log.c
Compiling file: retarget.c
Compiling file: fds.c
Compiling file: app_uart_fifo.c
Compiling file: nrf_delay.c
Compiling file: nrf_drv_common.c
Compiling file: nrf_drv_gpiote.c
Compiling file: nrf_drv_uart.c
Compiling file: fstorage.c
Compiling file: pstorage.c
Compiling file: bsp.c
Compiling file: bsp_btn_ble.c
Compiling file: ble_advdata.c
Compiling file: ble_advertising.c
Compiling file: ble_conn_params.c
Compiling file: ble_nus.c
Compiling file: ble_srv_common.c
Compiling file: ble_conn_state.c
Compiling file: peer_manager.c
Compiling file: peer_database.c
Compiling file: peer_data_storage.c
Compiling file: peer_data.c
Compiling file: peer_id.c
Compiling file: security_dispatcher.c
Compiling file: pm_buffer.c
Compiling file: pm_mutex.c
Compiling file: security_manager.c
Compiling file: gatt_cache_manager.c
Compiling file: gatts_cache_manager.c
Compiling file: gattc_cache_manager.c
Compiling file: id_manager.c
Compiling file: system_nrf51.c
Compiling file: softdevice_handler.c
Compiling file: main.cpp
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp: In function 'void ble_stack_init()':
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:358:48: error: too few arguments to function 'uint32_t sd_ble_enable(ble_enable_params_t*, uint32_t*)'
     err_code = sd_ble_enable(&ble_enable_params);
                                                ^
In file included from /Users/nilsweiss/nRF51/components/softdevice/s130/headers/ble_gap.h:48:0,
                 from /Users/nilsweiss/nRF51/components/softdevice/s130/headers/ble.h:52,
                 from /Users/nilsweiss/nRF51/components/ble/common/ble_advdata.h:28,
                 from /Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:33:
/Users/nilsweiss/nRF51/components/softdevice/s130/headers/ble.h:359:33: note: declared here
 SVCALL(SD_BLE_ENABLE, uint32_t, sd_ble_enable(ble_enable_params_t * p_ble_enable_params, uint32_t * p_app_ram_base));
                                 ^
/Users/nilsweiss/nRF51/components/softdevice/s130/headers/nrf_svc.h:52:45: note: in definition of macro 'SVCALL'
   __attribute__((naked)) static return_type signature \
                                             ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp: In function 'void pm_evt_handler(const pm_evt_t*)':
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:419:61: error: request for member 'error_type' in 'p_evt->pm_evt_t::params.pm_evt_t::<anonymous union>::link_secure_failed_evt.pm_link_secure_failed_evt_t::error', which is of non-class type 'const pm_sec_error_code_t {aka const short unsigned int}'
              if (p_evt->params.link_secure_failed_evt.error.error_type == PM_ERROR_TYPE_PM_SEC_ERROR)
                                                             ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:419:75: error: 'PM_ERROR_TYPE_PM_SEC_ERROR' was not declared in this scope
              if (p_evt->params.link_secure_failed_evt.error.error_type == PM_ERROR_TYPE_PM_SEC_ERROR)
                                                                           ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:421:69: error: request for member 'error' in 'p_evt->pm_evt_t::params.pm_evt_t::<anonymous union>::link_secure_failed_evt.pm_link_secure_failed_evt_t::error', which is of non-class type 'const pm_sec_error_code_t {aka const short unsigned int}'
                  switch (p_evt->params.link_secure_failed_evt.error.error.pm_sec_error)
                                                                     ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:423:27: error: 'PM_SEC_ERROR_CODE_PIN_OR_KEY_MISSING' was not declared in this scope
                      case PM_SEC_ERROR_CODE_PIN_OR_KEY_MISSING:
                           ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:433:69: error: request for member 'error' in 'p_evt->pm_evt_t::params.pm_evt_t::<anonymous union>::link_secure_failed_evt.pm_link_secure_failed_evt_t::error', which is of non-class type 'const pm_sec_error_code_t {aka const short unsigned int}'
                  switch (p_evt->params.link_secure_failed_evt.error.error.sec_status)
                                                                     ^
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp: At global scope:
/Users/nilsweiss/nRF51/project/ble_peripheral/ble_app_uart/main.cpp:89:23: warning: 'm_static_pin_option' defined but not used [-Wunused-variable]
 static ble_opt_t      m_static_pin_option;
                       ^
make: *** [_build/main.o] Error 1

10:28:21 Build Finished (took 8s.200ms)

